--- a/ROBUSPixelArt404/app/src/main/res/layout/activity_main.xml
+++ b/ROBUSPixelArt404/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@android:dimen/app_icon_size"
@@ -19,47 +20,7 @@
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/main_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/nav_bar"/>
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical">
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/question"
-            android:textSize="35sp"
-            android:paddingStart="20dp"
-            android:textStyle="bold"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:paddingStart="13dp"
-                android:layout_gravity="center"
-                android:src="@drawable/add_question"
-                android:id="@+id/add_question"/>
-        </androidx.appcompat.widget.LinearLayoutCompat>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="25sp"
-                android:paddingStart="20dp"
-                android:id="@+id/question"
-                android:textStyle="bold"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:id="@+id/answers">
-
-            </LinearLayout>
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </RelativeLayout>
+            android:name="com.github.robuspixelart404.MainFragment" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
