--- a/ROBUSPixelArt404/app/src/main/res/layout/main_fragment.xml
+++ b/ROBUSPixelArt404/app/src/main/res/layout/main_fragment.xml
@@ -3,32 +3,34 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <androidx.appcompat.widget.LinearLayoutCompat
+    android:layout_height="match_parent"
+    android:id="@+id/root">
+    <com.github.robuspixelart404.CustomGridView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="10dp"
+        app:layout_constraintTop_toTopOf="@id/root"
+        app:layout_constraintStart_toStartOf="@id/root"
+        android:id="@+id/grid"/>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@android:dimen/app_icon_size"
-        android:text="@string/scan"
-        android:textSize="30sp"
-        android:paddingStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/scan"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="6px"
-        android:background="@color/light_gray" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@android:dimen/app_icon_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/grid"
+        app:layout_constraintStart_toStartOf="@id/root"
         android:text="@string/draw"
         android:textSize="30sp"
-        android:paddingStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/draw"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        android:id="@+id/draw"
+        android:background="@drawable/border"
+        android:padding="15dp"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/grid"
+        app:layout_constraintStart_toEndOf="@id/draw"
+        android:text="@string/scan"
+        android:textSize="30sp"
+        android:id="@+id/scan"
+        android:background="@drawable/border"
+        android:padding="15dp"
+        android:gravity="center"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
